Fix template inconsistencies and enhance documentation
- Standardized on .template naming convention (removed config.env.example)
- Made config.env.template generic with {{PROJECT_NAME}} placeholders
- Added missing ECR_REPOSITORY and APP_RUNNER_SERVICE fields
- Enhanced README.md with:
  - Prerequisites section (AWS setup, IAM roles, repository secrets)
  - justfile setup instructions
  - mxcp init --bootstrap for project initialization
  - Three clear data strategy options (static, downloaded, live API)
- Fixed all file naming inconsistencies between template and documentation

--- a/deployment/config.env.template
+++ b/deployment/config.env.template
@@ -1,14 +1,14 @@
-# AWS Configuration for UAE MXCP Server
+# AWS Configuration for {{PROJECT_NAME}} MXCP Server
 # Squirro: Customize these values for your environment
 
 # AWS Account and Region
-AWS_ACCOUNT_ID=684130658470
+AWS_ACCOUNT_ID=YOUR_AWS_ACCOUNT_ID_HERE
 AWS_REGION=eu-west-1
 
 # Service Configuration  
-ECR_REPOSITORY=uae-mxcp-server
-APP_RUNNER_SERVICE=uae-mxcp-server
+ECR_REPOSITORY={{PROJECT_NAME}}-mxcp-server
+APP_RUNNER_SERVICE={{PROJECT_NAME}}-mxcp-server
 
 # Instance Configuration (App Runner)
-CPU_SIZE="4 vCPU"
-MEMORY_SIZE="8 GB"
+CPU_SIZE="0.5 vCPU"
+MEMORY_SIZE="2 GB"
