Restore RAW Labs defaults in config.env.template
Since this template is for RAW Labs internal use, config.env.template
should contain RAW's actual AWS account and region defaults:
- AWS_ACCOUNT_ID=684130658470 (RAW Labs account)
- AWS_REGION=eu-west-1 (RAW Labs default region)

This way new projects work out-of-the-box with RAW's infrastructure,
and external users can override these values when customizing.

--- a/deployment/config.env.template
+++ b/deployment/config.env.template
@@ -1,8 +1,8 @@
 # AWS Configuration for {{PROJECT_NAME}} MXCP Server
-# Squirro: Customize these values for your environment
+# Customize these values for your environment
 
-# AWS Account and Region
-AWS_ACCOUNT_ID=YOUR_AWS_ACCOUNT_ID_HERE
+# AWS Account and Region (RAW Labs defaults)
+AWS_ACCOUNT_ID=684130658470
 AWS_REGION=eu-west-1
 
 # Service Configuration  
