Add MXCP user configuration for LLM API keys
Added missing MXCP user configuration that was needed for LLM functionality:

- Created deployment/mxcp-user-config.yml.template with:
  - Transport config for Docker (streamable-http on 0.0.0.0:8001)
  - LLM model configurations (OpenAI GPT-4o, GPT-3.5, Anthropic Claude)
  - Environment variable references for API keys

- Updated Dockerfile to:
  - Create /home/mxcp/.mxcp directory
  - Copy user config template to ~/.mxcp/config.yml
  - Set proper ownership for mxcp user

- Updated setup-project.sh to copy user config template
- Updated README.md to document:
  - New template file in customizable components
  - Required OPENAI_API_KEY and ANTHROPIC_API_KEY secrets

This ensures MXCP projects have proper LLM configuration out of the box.

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -27,6 +27,10 @@ COPY . .
 COPY deployment/mxcp-site-docker.yml ./mxcp-site.yml
 COPY deployment/profiles-docker.yml ./profiles.yml
 
+# Create MXCP user configuration directory and copy config
+RUN mkdir -p /home/mxcp/.mxcp
+COPY deployment/mxcp-user-config.yml.template /home/mxcp/.mxcp/config.yml
+
 # PROJECT-SPECIFIC: UAE Business License Data Preparation
 # Squirro can modify this section for their data sources
 ARG MXCP_DATA_ACCESS_KEY_ID
@@ -44,7 +48,7 @@ ENV AWS_ACCESS_KEY_ID=""
 ENV AWS_SECRET_ACCESS_KEY=""
 
 # Ensure directories have correct permissions
-RUN chmod -R 755 ./data ./logs && chown -R mxcp:mxcp ./data ./logs
+RUN chmod -R 755 ./data ./logs && chown -R mxcp:mxcp ./data ./logs /home/mxcp/.mxcp
 
 # Set environment variables
 ENV PYTHONPATH=/app
