--- a/deployment/mxcp-user-config.yml.template
+++ b/deployment/mxcp-user-config.yml.template
@@ -8,7 +8,6 @@ transport:
     port: 8001
 
 # LLM Models Configuration
-# Add your API keys here or use environment variables
 models:
   gpt-4o:
     provider: openai
@@ -22,3 +21,28 @@ models:
     provider: anthropic
     api_key: ${ANTHROPIC_API_KEY}
     model: claude-3-5-sonnet-20241022
+
+# Generic Secrets Configuration
+# Store any project-specific secrets here
+secrets:
+  # Database connections
+  database_url: ${DATABASE_URL}
+  redis_url: ${REDIS_URL}
+  
+  # API Keys for external services
+  stripe_api_key: ${STRIPE_API_KEY}
+  sendgrid_api_key: ${SENDGRID_API_KEY}
+  slack_webhook_url: ${SLACK_WEBHOOK_URL}
+  
+  # OAuth and Authentication
+  google_client_id: ${GOOGLE_CLIENT_ID}
+  google_client_secret: ${GOOGLE_CLIENT_SECRET}
+  jwt_secret: ${JWT_SECRET}
+  
+  # Cloud Services
+  s3_access_key: ${S3_ACCESS_KEY}
+  s3_secret_key: ${S3_SECRET_KEY}
+  
+  # Custom project secrets
+  api_base_url: ${API_BASE_URL}
+  webhook_secret: ${WEBHOOK_SECRET}
