🧪 Add tested Squirro workflow to template
✅ TESTED COMPONENTS ADDED:
- .squirro/setup-for-squirro.sh.template (working setup script)
- .squirro/workflows/build-and-push-to-ecr.yml.template (ECR-only workflow)
- Proven in ppolydoras/uae-mxcp-server-squirro-test simulation

✅ WORKFLOW VALIDATED:
- GitHub Actions builds and pushes to ECR successfully
- External deployment system integration ready
- Proper --repo flag usage for secrets/variables
- No App Runner deployment (Squirro uses external system)

Template now includes the complete, tested Squirro integration workflow.

--- a/.squirro/setup-for-squirro.sh.template
+++ b/.squirro/setup-for-squirro.sh.template
@@ -23,9 +23,12 @@ mkdir -p .github
 touch .github/.squirro-configured
 echo "squirro-deployment" > .github/.squirro-configured
 
-# 2. Copy Squirro-specific GitHub workflow
-echo "📋 Setting up Squirro EKS deployment workflow..."
-cp .squirro/workflows/deploy-eks.yml .github/workflows/
+# 2. Copy Squirro's build-and-push workflow (ECR only, no App Runner)
+echo "📋 Setting up Squirro's build-and-push workflow..."
+cp .squirro/workflows/build-and-push-to-ecr.yml .github/workflows/
+rm -f .github/workflows/deploy.yml  # Remove RAW's App Runner deployment
+echo "   ✅ Replaced RAW's App Runner workflow with Squirro's ECR-only workflow"
+echo "   ℹ️  External system (Flux) will handle K8s deployment automatically"
 
 # 3. Update mxcp-site.yml for Squirro profile
 echo "⚙️  Configuring MXCP for Squirro environment..."
@@ -63,6 +66,8 @@ echo ""
 echo "✅ Template files created!"
 echo ""
 echo "🚨 CRITICAL: You MUST edit these files before deployment:"
+echo ""
+echo "📝 Required edits for {{PROJECT_NAME}} MXCP Server:"
 echo ""
 echo "📝 Required edits:"
 echo "1. Edit deployment/config.env:"
