Clean up template inconsistencies and remove duplicates
Fixed major issues found in cross-check with UAE project:

1. Fixed GitHub workflow deploy.yml:
   - Removed hardcoded UAE-specific values (AWS account, ECR repo names)
   - Now properly loads config from deployment/config.env via deploy script
   - Template is now truly generic

2. Fixed Dockerfile comment:
   - Changed from 'UAE MXCP Server' to 'MXCP Server - Generic build template'
   - Makes template project-agnostic

3. Cleaned up .squirro/ directory duplicates:
   - Removed duplicate setup-for-squirro.sh.template (kept working .sh version)
   - Removed duplicate build-and-push-to-ecr.yml (kept .template version)
   - Now clear distinction between working files and templates

Template is now consistent and properly generic for any MXCP project.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,7 @@ on:
           - production
           - staging
 
-env:
-  AWS_REGION: eu-west-1
-  AWS_ACCOUNT_ID: 684130658470
-  ECR_REPOSITORY: uae-mxcp-server
-  APP_RUNNER_SERVICE: uae-mxcp-server
+# Configuration loaded from deployment/config.env by deploy-app-runner.sh
 
 jobs:
   check-secrets:
