--- a/justfile.template
+++ b/justfile.template
@@ -4,20 +4,20 @@
 # Download {{PROJECT_NAME}} data from S3
 download:
     @echo "📥 Downloading {{PROJECT_NAME}} data..."
-    python3 scripts/download_real_data.py --output data/licenses.csv
+    {{DATA_DOWNLOAD_COMMAND}}
     @echo "✅ Data download complete"
 
 # Build dbt models from downloaded data
 build-models:
     @echo "🏗️ Building dbt models..."
     dbt deps
-    dbt run --vars '{"licenses_file": "data/licenses.csv"}'
+    {{DBT_RUN_COMMAND}}
     @echo "✅ dbt models built successfully"
 
 # Run data quality tests
 test-data:
     @echo "🧪 Running data quality tests..."
-    dbt test --vars '{"licenses_file": "data/licenses.csv"}'
+    {{DBT_TEST_COMMAND}}
     @echo "✅ Data quality tests passed"
 
 # Run integration tests
