Fix template issues and add optimization improvements
## 🔧 Fixed Critical Issues:
- Removed hardcoded 'UAE' references in start.sh
- Made deploy-app-runner.sh fully generic with placeholders
- Added mxcp-user-config.yml setup in Dockerfile
- Fixed Squirro merge script to use generic upstream URL

## ✨ Added Missing Components:
- .gitignore with comprehensive patterns
- docker-compose.yml for local development
- OPTIMIZATION-GUIDE.md with performance, security, and cost tips

## 📈 Enhanced setup-project.sh:
- Added --force flag for overwriting files
- Added project name validation (alphanumeric + hyphens)
- Added AWS region format validation
- Added file existence checking with prompts
- Better error handling and user feedback

## 🎯 Key Improvements:
- 50% Docker image size reduction guide
- Security hardening recommendations
- Cost optimization strategies
- Performance tuning tips
- Monitoring & observability setup
- Local development workflow

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -27,6 +27,11 @@ COPY . .
 COPY deployment/mxcp-site-docker.yml ./mxcp-site.yml
 COPY deployment/profiles-docker.yml ./profiles.yml
 
+# Setup MXCP user configuration with secrets
+RUN mkdir -p /home/mxcp/.mxcp
+COPY deployment/mxcp-user-config.yml.template /home/mxcp/.mxcp/config.yml
+RUN chown -R mxcp:mxcp /home/mxcp/.mxcp
+
 # PROJECT-SPECIFIC: UAE Business License Data Preparation
 # Squirro can modify this section for their data sources
 ARG MXCP_DATA_ACCESS_KEY_ID
