Fix .template suffix consistency
- Renamed setup-for-squirro.sh to setup-for-squirro.sh.template
  (contains {{PROJECT_NAME}} placeholder)
- Updated references in README files to reflect template usage
- Added instructions for copying and customizing the template

Now consistent: ALL files with placeholders have .template suffix

--- a/.squirro/README.md.template
+++ b/.squirro/README.md.template
@@ -17,6 +17,11 @@ cd uae-mxcp-server
 
 ### 2. Run Setup Script
 ```bash
+# First copy and customize the template
+cp .squirro/setup-for-squirro.sh.template .squirro/setup-for-squirro.sh
+# Edit to replace {{PROJECT_NAME}} with your project name
+vim .squirro/setup-for-squirro.sh
+# Then run it
 ./.squirro/setup-for-squirro.sh
 ```
 
