Emphasize that all four GitHub variables are required
- Updated ENVIRONMENT.md.template with clearer example including all four variables
- Added emphasis in README.md that ALL FOUR variables must be set
- This prevents deployment failures due to missing APP_RUNNER_SERVICE variable

--- a/ENVIRONMENT.md.template
+++ b/ENVIRONMENT.md.template
@@ -22,9 +22,11 @@ gh variable set AWS_REGION --body "your-aws-region" [--repo your-org/{{PROJECT_N
 gh variable set ECR_REPOSITORY --body "{{PROJECT_NAME}}-mxcp-server" [--repo your-org/{{PROJECT_NAME}}-mxcp-server]
 gh variable set APP_RUNNER_SERVICE --body "{{PROJECT_NAME}}-mxcp-server" [--repo your-org/{{PROJECT_NAME}}-mxcp-server]
 
-# Example for RAW Labs:
+# Example for RAW Labs (ALL FOUR are required!):
 # gh variable set AWS_ACCOUNT_ID --body "684130658470"
 # gh variable set AWS_REGION --body "eu-west-1"
+# gh variable set ECR_REPOSITORY --body "uae-licenses-mxcp-server"
+# gh variable set APP_RUNNER_SERVICE --body "uae-licenses-mxcp-server"
 ```
 
 ### Repository Secrets (Settings → Secrets)
