--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,10 +91,14 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         CI: true
+        # Data access credentials (if available)
+        AWS_ACCESS_KEY_ID: ${{ secrets.MXCP_DATA_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }}
       run: |
         curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to ~/.local/bin
         echo "$HOME/.local/bin" >> $GITHUB_PATH
         # Run comprehensive CI tests (config validation + data tests if available)
+        # If data credentials are not set, this will fall back to validate-config only
         just ci-tests-with-data || just validate-config
 
   deploy:
@@ -219,7 +223,10 @@ jobs:
         
         echo "🌐 Service URL: https://$SERVICE_URL"
         
-        # Install just for post-deployment testing
+        # Install dependencies for testing
+        pip install httpx
+        
+        # Install just (for future use)
         curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to ~/.local/bin
         echo "$HOME/.local/bin" >> $GITHUB_PATH
         
@@ -228,13 +235,28 @@ jobs:
         if curl -f "https://$SERVICE_URL/health" > /dev/null 2>&1; then
           echo "✅ Service health check passed"
           
-          # Run post-deployment integration tests using justfile
-          echo "🧪 Running post-deployment tests..."
-          # Try justfile integration tests first, fallback to direct python if justfile not customized
-          just test-integration || python tests/python/test_comprehensive.py --transport streamable-http --host $SERVICE_URL --port 443 || {
-            echo "⚠️ Post-deployment tests failed - service may need more time to start"
-            echo "Service is deployed but may not be fully ready for testing"
-          }
+          # Basic connectivity test - don't run full integration tests here
+          echo "🧪 Testing basic MCP connectivity..."
+          if python3 -c "
+import httpx
+import sys
+try:
+    response = httpx.get('https://$SERVICE_URL/mcp')
+    if response.status_code == 200:
+        print('✅ MCP endpoint responded successfully')
+        sys.exit(0)
+    else:
+        print(f'⚠️ MCP endpoint returned status {response.status_code}')
+        sys.exit(1)
+except Exception as e:
+    print(f'⚠️ Could not connect to MCP endpoint: {e}')
+    sys.exit(1)
+" ; then
+            echo "✅ Basic connectivity test passed"
+          else
+            echo "⚠️ MCP connectivity test failed - service may need more time to start"
+            echo "Service is deployed but may not be fully ready"
+          fi
         else
           echo "⚠️ Health check failed, but service may still be starting..."
         fi
