Simplify workflow and move all testing to Docker build
- Renamed validate-config to pre-flight-checks (only checks variables/YAML)
- Renamed Test deployment to Verify deployment (only health checks)
- Removed redundant test logic from GitHub Actions
- Added 'just test-all' to Dockerfile to run all 3 test levels during build
- Added OPENAI_API_KEY as build arg for test-evals
- Simplified workflow: pre-flight → build (with tests) → deploy → verify

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
             echo "⚠️ AWS credentials not configured. Please add AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY to repository secrets."
           fi
 
-  validate-config:
+  pre-flight-checks:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -74,35 +74,15 @@ jobs:
         
         echo "✅ All required variables are configured"
     
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install dependencies
+    - name: Validate YAML configurations
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r deployment/requirements.txt
-        # Install any additional dependencies that might be needed for evals
-        pip install openai tiktoken
-    
-    - name: Run tests
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        CI: true
-        # Data access credentials (if available)
-        AWS_ACCESS_KEY_ID: ${{ secrets.MXCP_DATA_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }}
-      run: |
-        curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to ~/.local/bin
-        echo "$HOME/.local/bin" >> $GITHUB_PATH
-        # Run comprehensive CI tests (config validation + data tests if available)
-        # If data credentials are not set, this will fall back to validate-config only
-        just ci-tests-with-data || just validate-config
+        echo "📝 Validating YAML configurations..."
+        python -c "import yaml; yaml.safe_load(open('mxcp-site.yml')); print('✅ mxcp-site.yml is valid')"
+        python -c "import yaml, glob; [yaml.safe_load(open(f)) for f in glob.glob('tools/*.yml')]; print('✅ All tool configurations valid')"
+        echo "✅ Pre-flight checks passed"
 
   deploy:
-    needs: [check-secrets, validate-config]
+    needs: [check-secrets, pre-flight-checks]
     if: needs.check-secrets.outputs.aws-creds-configured == 'true'
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment || 'production' }}
@@ -142,6 +122,7 @@ jobs:
         docker build -f deployment/Dockerfile \
           --build-arg MXCP_DATA_ACCESS_KEY_ID=${{ secrets.MXCP_DATA_ACCESS_KEY_ID }} \
           --build-arg MXCP_DATA_SECRET_ACCESS_KEY=${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }} \
+          --build-arg OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
           -t ${{ vars.ECR_REPOSITORY }}:${{ github.sha }} .
         
         # Tag for ECR
@@ -210,7 +191,7 @@ jobs:
           exit 1
         fi
     
-    - name: Test deployment
+    - name: Verify deployment
       run: |
         # Wait for deployment to stabilize
         echo "⏳ Waiting for App Runner service to stabilize..."
@@ -223,50 +204,20 @@ jobs:
         
         echo "🌐 Service URL: https://$SERVICE_URL"
         
-        # Install dependencies for testing
-        pip install httpx
-        
-        # Install just (for future use)
-        curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to ~/.local/bin
-        echo "$HOME/.local/bin" >> $GITHUB_PATH
-        
-        # Test service health
-        echo "🔍 Testing service health..."
+        # Verify service health
+        echo "🔍 Verifying service health..."
         if curl -f "https://$SERVICE_URL/health" > /dev/null 2>&1; then
-          echo "✅ Service health check passed"
-          
-          # Basic connectivity test - don't run full integration tests here
-          echo "🧪 Testing basic MCP connectivity..."
-          if python3 -c "
-import httpx
-import sys
-try:
-    response = httpx.get('https://$SERVICE_URL/mcp')
-    if response.status_code == 200:
-        print('✅ MCP endpoint responded successfully')
-        sys.exit(0)
-    else:
-        print(f'⚠️ MCP endpoint returned status {response.status_code}')
-        sys.exit(1)
-except Exception as e:
-    print(f'⚠️ Could not connect to MCP endpoint: {e}')
-    sys.exit(1)
-" ; then
-            echo "✅ Basic connectivity test passed"
-          else
-            echo "⚠️ MCP connectivity test failed - service may need more time to start"
-            echo "Service is deployed but may not be fully ready"
-          fi
+          echo "✅ Health endpoint responding"
         else
-          echo "⚠️ Health check failed, but service may still be starting..."
+          echo "⚠️ Health check failed, service may still be starting..."
         fi
         
-        # Test MCP endpoint availability
-        echo "🔍 Testing MCP endpoint..."
+        # Verify MCP endpoint
+        echo "🔍 Verifying MCP endpoint..."
         if curl -f "https://$SERVICE_URL/mcp" > /dev/null 2>&1; then
           echo "✅ MCP endpoint accessible"
         else
-          echo "⚠️  MCP endpoint check failed, but deployment completed"
+          echo "⚠️ MCP endpoint not responding yet"
         fi
         
         echo ""
