Fix MXCP config validation error by removing invalid 'secrets' property
- MXCP doesn't support a generic 'secrets' section
- Replaced with comments about project-specific configuration
- This fixes the 'Additional properties are not allowed' error during tests

--- a/deployment/mxcp-user-config.yml.template
+++ b/deployment/mxcp-user-config.yml.template
@@ -18,10 +18,9 @@ models:
     api_key: ${OPENAI_API_KEY}
     model: gpt-3.5-turbo
 
-# Generic Secrets Configuration
-# Store any project-specific secrets here
-# Examples:
-#   database_url: ${DATABASE_URL}
-#   api_key: ${EXTERNAL_API_KEY}
-#   webhook_secret: ${WEBHOOK_SECRET}
-secrets: {}
+# Project-Specific Configuration
+# Add any additional MXCP configuration here as needed
+# For example:
+#   - Additional model configurations
+#   - Transport settings
+#   - Tool-specific settings
