Add proper MXCP secrets configuration with simple custom secret example
- Added projects/profiles structure to mxcp-user-config.yml.template
- Included a simple custom secret example with param_a and param_b
- Added comment in mxcp-site-docker.yml.template showing how to reference secrets
- This follows MXCP's proper configuration structure while keeping it simple

--- a/deployment/mxcp-site-docker.yml.template
+++ b/deployment/mxcp-site-docker.yml.template
@@ -5,6 +5,9 @@ dbt:
   enabled: true
 sql_tools:
   enabled: true
+# Uncomment and list secrets when your tools need them:
+# secrets:
+#   - example-secret
 profiles:
   prod:
     duckdb:
